# gamemode-shell-extension

./: .gitignore  README.md  client.js  extension.js  install_schema.sh  makezip.sh  meson.build  metadata.json  prefs.js  stylesheet.css
locale/ru/LC_MESSAGES/: gamemodeshellextension@trsnaqe.com.mo
po/: LINGUAS  POTFILES.in  de.po  fr.po  gamemode-shell-extension.pot  it.po  ru.po  update_strings.sh
scripts/: compile-schema.sh
settings/: org.gnome.shell.extensions.gamemodeshellextension.gschema.xml
